Fixed W3C Validator No errors on html and CSS, fix on table Added Horizontal Scroll for table if the tab is too narrow

--- a/styles.css
+++ b/styles.css
@@ -727,6 +727,7 @@ textarea {
     background-size: 15%; 
     border-radius: 12px ;
     box-shadow: 0 4px 10px gray;
+    overflow-x: auto; /* horizontal scroll on small screens */
 }
 .members-interests table {
     margin: auto;        /* center table */
@@ -767,6 +768,7 @@ textarea {
     background-size: 7%;   /* smaller pattern */
     border-radius: 12px;
     box-shadow: 0 4px 10px gray;
+    overflow-x: auto; /* horizontal scroll on small screens */
 }
 
 .bottom-row h2 {
@@ -779,7 +781,7 @@ textarea {
     width: 180%; /* full width */
     max-width:180%;  /* limit max width */
     text-align: center; /* center text */
-    margin: auto; /* center table */
+    margin: auto;      /* center table */
 }
 
 .bottom-row th,
